@@ -114,6 +114,7 @@ debian-installer (2007xxxx) UNRELEASED; urgency=low
   * Remove old "linux" syslinux label for x86, it was replaced by "install".
   * Convert mips/arcboot.conf to use "install" and not "linux" as the label as
     well.
+  * Apply patch from Václav Ovsík adding a NETBOOT_DI_DIR variable.
 
   [ Davide Viti ]
   * Switch g-i as to use ttf-dejavu for rendering Georgian text
